# pyprodag

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example_settings.json  pyproject.toml  requirements.txt  run_data_aggregator_daemon.py  run_pyprodag_daemon.py
.github/workflows/: main.yml
src/: __init__.py  detailed_information.py  draw_statistics.py  file_system_interaction.py  finished_information.py  process_information_aggregator.py  settings_manager.py  summary_information.py
src/pyprodag/: detailed_information.py  draw_statistics.py  file_system_interaction.py  process_information_aggregator.py  settings_manager.py  summary_information.py  tol_colors.py
test/: test_units.py
tests/: process_example.py  settings.json  test_units.py
