[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyprodag"
description = "A simple PYthon PROcess Data AGgregator tool to monitor processes on your computer."
readme = "README.md"
authors = [
  { name = "Moritz Neuberger" },
]
license = { file = "LICENSE" }
requires-python = ">=3.7"
version = "0.1"

dependencies = [
    "numpy>=1.13.3",
    "pytest >= 6.0",
    "pytest-cov",
    "datetime",
    "matplotlib",
    "pandas",
    "pre-commit",
    "psutil"
]


[flake8]
max-complexity = 12

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["test"]
